# mirrormove

./: .gitignore  CMakeLists.txt  README.md
include/: entity.h  game.h  map.h  scene.h  ui.h
resources/html/: shell.html
src/: entity.c  main.c  map.c  scene.c
